--- a/_posts/2016-02-02-size.md
+++ b/_posts/2016-02-02-size.md
@@ -18,9 +18,9 @@ As always on Rentswatch, we analyze cities not by looking at administrative boun
 
 ## It's not about wealth
 
-The size of a 2-bedroom flat has nothing to do with wealth. Munich and Paris are both extremely rich cities. On the contrary, Magdeburg is one of Germany's poorest. Average revenue per person in Magdeburg is about [16,000€ per year](http://www.stala.sachsen-anhalt.de/Internet/Home/Veroeffentlichungen/Pressemitteilungen/2013/11/93.html). In Ile-de-France, the region around Paris, the median income is over [23,000€](http://www.insee.fr/fr/themes/document.asp?reg_id=20&ref_id=20529).
+The size of a 2-bedroom flat has nothing to do with wealth. Munich and Paris are both extremely rich cities, but their housing market is totally different. A 2-bedroom flat in Munich typically offers 63 square meters. On the contrary, Magdeburg is one of Germany's poorest cities. Average revenue per person in Magdeburg is about [16,000€ per year](http://www.stala.sachsen-anhalt.de/Internet/Home/Veroeffentlichungen/Pressemitteilungen/2013/11/93.html). In Ile-de-France, the region around Paris, the median income is over [23,000€](http://www.insee.fr/fr/themes/document.asp?reg_id=20&ref_id=20529). Despite this difference, flats are much bigger in Magdeburg than in Paris.
 
-Flat size also has little to do with overcrowding. In Paris, population density is above 5000 people per square kilometer, while it is barely over 1000 in Bordeaux, where 2-bedroom flats are equally small.
+Flat size also has little to do with overcrowding. After all, Magdeburg lost close to 20% of its population since 1990. Maybe flats there are large because so many of them are empty? However, this explanation doesn't hold. In Paris, population density is above 5000 people per square kilometer, while it is barely over 1000 in Bordeaux, where 2-bedroom flats are equally small. In Munich, population density is relatively high (above 3000 persons per square kilometer) but flats are very spacious.
 
 Look at the difference between the size of 2-bedroom flats and 4-bedroom ones. Here, Paris is in the first half of the rankings and Bordeaux is not far behind. In other words, in these cities, poor people rent horribly small flats but rich people rent fairly spacious ones.
 
