--- a/_posts/2016-02-02-size.md
+++ b/_posts/2016-02-02-size.md
@@ -34,4 +34,8 @@ In cities at the bottom of the graph, like Magdeburg or Rostock, there is very l
 
 It might be that families move out of the city when they need more space or that there is much less market activity for small 4-bedroom flats (because people hold on to the flats once they have them). Whatever the reason, it shows that it's harder to find a relatively cheap and relatively large flat in Paris, Prague and Bordeaux.
 
-Such inequality is not visible when looking at income alone. In Paris, you need to be rich (by European standards) even to rent a microflat. The typical 2-bedroom flat in Paris costs 1,100€ to rent, which is more expensive than a 4-bedroom flat everywhere else except for Berlin and Munich. 
+Such inequality is not visible when looking at income alone. In Paris, you need to be rich (by European standards) even to rent a microflat. The typical 2-bedroom flat in Paris costs 1,100€ to rent, which is more expensive than a 4-bedroom flat everywhere else except for Berlin and Munich.
+
+## Want to see the data for your city?
+
+Rentswatch aims at fostering quality journalism on the housing crisis. We are looking for exclusive media partners in Europe to explore the data with us. Contact us at contact@rentswatch.com 
