--- a/_posts/2016-02-02-size.md
+++ b/_posts/2016-02-02-size.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: "Flat size: it's not that small"
+title: "Who has the biggest flats?"
 excerpt: "How flat sizes compare across Europe."
 author: nkb
 date: 2016-02-09
 ---
 
-It's not cheap to live in the cool 11<sup>th</sup> arrondissement of Paris. But for just over 900€ per month (excluding electricity), a young couple can rent a 2-bedroom flat. A 22-square-meter 2-bedroom flat, that is. In this “magnificent” object (quotes are from the realtor), the “furnished living room” doubles as a kitchen. The good thing is that you can wash dishes while sitting on the couch.
+It's not cheap to live in the cool 11<sup>th</sup> arrondissement of Paris. But for just over 900€ per month (excluding electricity), a young couple can rent a 2-bedroom flat. A 22-square-meter 2-bedroom flat, that is. In this “magnificent” object (quotes are from the realtor), the “furnished living room” doubles as a kitchen. The good thing is that you can operate the microwave while sitting on the couch. The bad thing is that you might break the microwave if you try to stretch out your legs while sitting on the couch.
 
 ![Magnificent 2-bedroom flat](../images/magnificent-2b.jpg)
 
