--- a/_posts/2016-03-17-api.md
+++ b/_posts/2016-03-17-api.md
@@ -48,7 +48,7 @@ Let's parse this data to get the average price for each station.
 
 #### Make it legible
 
-And let's multiply the average price per square meter by 40 to have the average price for a 40-square-meter flat, which is more ligible for users.
+Let's multiply the average price per square meter by 40 to have the average price for a 40-square-meter flat, which is more ligible for users.
 
 ![New column for a 40 sqm flat](../images/api-8.png)
 
@@ -56,6 +56,6 @@ Now open an image processing software and have fun!
 
 ![Mock metro plan for line 3](../images/api-9.png)
 
-## Want to get an API key?
+## Want an API key?
 
 Rentswatch aims at fostering quality journalism on the housing crisis. We are looking for exclusive media partners in Europe to explore the data with us. Contact us at contact@rentswatch.com 
